[package]
name = "echo-state-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
plotters = "0.3"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
assert_approx_eq = "1.1"

[[bin]]
name = "run"
path = "src/bin/run.rs"
